--- a/index.html
+++ b/index.html
@@ -3,17 +3,150 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Developer Portfolio</title>
+    <title>Web Developer Portfolio</title><link rel="stylesheet" href="styles/portfolio.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
-<body>
-    <header>
-
+<body class="open-sans-normal">
+    <header class="header seconday-bg">
+        <nav>
+            <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
+            <ul>
+                <li><a class="dark-2" href="">Portfolio</a></li>
+                <li><a class="dark-2" href="">Blog</a></li>
+                <li><a href=""><button class="btn">Hire Me</button></a></li>
+            </ul>
+        </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h4 class="banner-greetings">Hi, I am</h4>
+                <h1 class="banner-title">Toufiq</h1>
+                <p class="banner-description">
+                    A Web Developer and Designer
+                </p>
+                <button class="btn">Download CV</button>
+                <button class="btn">Contact</button>
+            </div>
+            <img style="border-radius: 50%;" class="banner-profile-pic" src="images/img4.jpg" alt="bro">
+        </div>
     </header>
     <main>
-
+        <section class="about secondary-bg">
+            <h3 class="section-title">About Me</h3>
+            <p class="section-description">
+                I am a web developer and designer with a passion for creating beautiful and functional websites. I have experience working with a variety of clients, from small businesses to large corporations. My goal is to help you achieve your online goals by creating a website that is both visually appealing and user-friendly.
+            </p>
+            <div class="about-items">
+               <div class="about-item">
+                <p class="item-title">Name</p>
+                <p class="item-description">Toufiqur Rahman</p>
+               </div>
+               <div class="about-item">
+                <p class="item-title">Email</p>
+                <p class="item-description">Toufiq1285@gmail.com</p>
+               </div>
+               <div class="about-item">
+                <p class="item-title">Date of Birth</p>
+                <p class="item-description">18/08/2000</p>
+               </div>
+               <div class="about-item">
+                <p class="item-title">From</p>
+                <p class="item-description">Chittagong,Bangladesh</p>
+               </div>
+            </div>
+        </section>
+        <section class="skills">
+            <h3 class="section-title text-center">What I do</h3>
+            <p class="section-description text-center">I have quite some experience building software for clients in Bangladesh. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+        <div class=" "> 
+            <div class="skill">
+                <img src="images/icons/js.png" alt="">
+                <h4 class="skill-title">Vanilla JavaScript</h4>
+                <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+            <div class="skill">
+                <img src="images/icons/react.png" alt="">
+                <h4 class="skill-title">React</h4>
+                <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+            <div class="skill">
+                <img src="images/icons/nodejs.png" alt="">
+                <h4 class="skill-title">Node.js</h4>
+                <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+            <div class="skill">
+                <img src="images/icons/mongo.png" alt="">
+                <h4 class="skill-title">MongoDB</h4>
+                <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.-
+                </p>
+            </div>
+        </div> 
+        </section>
+        <section class="resume">
+            <h3 class="section-title text-center">A summary of My Resume</h3>
+            <div class="resume-container">
+                <div class="resume-column">
+                    <h3 class="resume-column-title">My Education</h3>
+                    <div class="experience">
+                        <h4 class="experience-title">Bachelor in Mechanical Engineering</h4>
+                        <h5 class="experience-sub-title">CUET/2019-2023</h5>
+                        <div class="experience-description">Machine was my first love since childhood.</div>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title">Higher Secondary</h4>
+                        <h5 class="experience-sub-title">HMMC/2018</h5>
+                        <div class="experience-description">Two years struggle with enormous efforts.</div>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title">Secondary</h4>
+                        <h5 class="experience-sub-title">NGHS/2016</h5>
+                        <div class="experience-description">End of my school life of an era</div>
+                    </div>
+                </div>
+                <div class="resume-column">
+                    <h3 class="resume-column-title">My Experience</h3>
+                    <div class="experience">
+                        <h4 class="experience-title">Head of Web Development section</h4>
+                        <h5 class="experience-sub-title">InspireX.team/2023-current</h5>
+                        <div class="experience-description">The very first startup of my life</div>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title">Content Writer</h4>
+                        <h5 class="experience-sub-title">2020-2023</h5>
+                        <div class="experience-description">Did some content writing to overcome financial difficulties.</div>
+                    </div>
+                    <hr>
+                </div>
+            </div>
+            <div class="text-center resume-download-cv">
+                <button class="btn text-center">Download CV</button>
+            </div>
+        </section>
     </main>
-    <footer>
-        
+    <footer class="secondary-bg">
+        <div class="footer-column">
+            <div class="section-titile">Let's Connect</div>
+            <p>Please fill out the form on this section to contact with me.</p>
+            <div>
+                <a href=""><img src="images/icons/facebook.png" alt=""></a>
+                <a href=""><img src="images/icons/insta.png" alt=""></a>
+                <a href=""><img src="images/icons/twitter.png" alt=""></a>
+            </div>
+        </div>
+        <div class="footer-column">
+            <h3 class="section-title">Let's Inbox Me</h3>
+            <form action="">
+                <input type="text" name="" id="" placeholder="Your Name">
+                <input type="email" name="" id="" placeholder="Your Email">
+                <textarea name="" id="" cols="20" rows="20" placeholder="Message"></textarea>
+                <input class="btn" type="submit" value="Submit">
+            </form>
+        </div>
+
     </footer>
 </body>
 </html>
